# maimai-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
maimai_cli/: __init__.py  actions.py  cli.py  client.py  config.py  errors.py  media.py  output.py  protocol.py  refs.py
maimai_cli/commands/: __init__.py  auth.py  common.py  content.py  media.py
skill/: SKILL.md  _meta.json
skill/references/: auth.md  detail.md  feeds.md  search.md  troubleshooting.md
tests/: test_protocol.py  test_refs.py
