[project]
name = "maimai-cli"
version = "0.3.2"
description = "CLI helpers for user-authorized Maimai web sessions"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [
    { name = "mariotong" },
]
keywords = ["cli", "maimai", "personal-data", "export"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/mariotong/maimai-cli"
Repository = "https://github.com/mariotong/maimai-cli"
Issues = "https://github.com/mariotong/maimai-cli/issues"

[project.scripts]
maimai = "maimai_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
